# paksmith

./: .gitignore  .mutants-full.diff  .release-please-manifest.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  _typos.toml  deny.toml  release-please-config.json
crates/paksmith-bench/: Cargo.toml
crates/paksmith-bench/baselines/phase-2a-done-arm64/: inspect_json_compact.estimates.json  inspect_json_pretty.estimates.json  name_table_resolve_hot.estimates.json  package_read_from_medium.estimates.json  package_read_from_pak_tiny.estimates.json  package_read_from_small.estimates.json  package_read_from_tiny.estimates.json  pak_open_large.estimates.json  pak_open_tiny.estimates.json  pak_read_entry_uncompressed_small.estimates.json  pak_read_entry_zlib_large.estimates.json  pak_read_entry_zlib_small.estimates.json  pak_verify_full.estimates.json
crates/paksmith-bench/baselines/phase-3-done-arm64/: bulk_decompress_zlib_8mib.estimates.json  datatable_export_csv_10k_50.estimates.json  datatable_export_json_10k_50.estimates.json  mesh_gltf_lower_300k_verts.estimates.json  package_read_from_large_monolithic.estimates.json  skeletal_gltf_lower_100k_verts.estimates.json  texture_decode_bc1.estimates.json  texture_decode_bc3.estimates.json  texture_decode_bc7.estimates.json
crates/paksmith-bench/benches/: asset.rs  bulk.rs  datatable.rs  inspect.rs  mesh.rs  name_table.rs  pak.rs  skeletal.rs  smoke.rs  texture.rs  try_reserve_exact_cost.rs
crates/paksmith-bench/src/: lib.rs
crates/paksmith-cli/: CHANGELOG.md  Cargo.toml
crates/paksmith-cli/src/: main.rs  output.rs  path_util.rs
crates/paksmith-cli/src/commands/: detect.rs  extract.rs  inspect.rs  key_resolve.rs  list.rs  mod.rs  profile.rs  search.rs
crates/paksmith-cli/src/extract/: classify.rs  mod.rs  safe_path.rs  select.rs  summary.rs
crates/paksmith-cli/src/inspect/: mod.rs  select.rs  tree.rs
crates/paksmith-cli/src/search/: mod.rs
crates/paksmith-cli/tests/: cli_integration.rs  detect_cli.rs  extract_cli.rs  inspect_cli.rs  profile_cli.rs  search_cli.rs
crates/paksmith-cli/tests/common/: mod.rs
crates/paksmith-cli/tests/snapshots/: extract_cli__extract_summary_snapshot.snap  inspect_cli__inspect_export_0_snapshot.snap  inspect_cli__inspect_json_snapshot.snap  inspect_cli__inspect_path_summary_snapshot.snap
crates/paksmith-core/: CHANGELOG.md  Cargo.toml
crates/paksmith-core-tests/: Cargo.toml
crates/paksmith-core-tests/tests/: asset_proptest.rs  bulk_data_integration.rs  data_table_integration.rs  from_reader.rs  index_proptest.proptest-regressions  index_proptest.rs  oom_asset.rs  oom_pak.rs  pak_integration.rs  texture_integration.rs  typed_struct_integration.rs
crates/paksmith-core/examples/: emit_gltf_validation_fixtures.rs
crates/paksmith-core/src/: digest.rs  error.rs  lib.rs  seams.rs
crates/paksmith-core/src/asset/: bulk_data.rs  custom_version.rs  data_resource.rs  engine_version.rs  export_table.rs  fstring.rs  guid.rs  import_table.rs  mappings.rs  mod.rs  name_table.rs  package.rs  package_index.rs  property_bag.rs  summary.rs  version.rs  wire.rs
crates/paksmith-core/src/asset/exports/: data_table.rs  dispatch.rs  mod.rs
crates/paksmith-core/src/asset/property/: bag.rs  containers.rs  mod.rs  primitives.rs  tag.rs  test_utils.rs  text.rs  unversioned.rs
crates/paksmith-core/src/asset/structs/: bounds.rs  (+7 more)
crates/paksmith-core/src/container/: mod.rs
crates/paksmith-core/src/export/: adpcm.rs  audio.rs  data_table.rs  generic.rs  gltf_common.rs  locres.rs  mod.rs  pcm.rs  skeletal_mesh.rs  static_mesh.rs  texture.rs  vorbis.rs
crates/paksmith-core/src/localization/: locres.rs  mod.rs
crates/paksmith-core/src/profile/: cache.rs  config.rs  detection.rs  key_test.rs  mod.rs  registry.rs  resolve.rs  signature.rs  store.rs
crates/paksmith-core/src/testing/: bench.rs  bulk_data.rs  gltf_fixtures.rs  mod.rs  oom.rs  uasset.rs  usmap.rs  v10.rs  wire.rs
crates/paksmith-core/tests/: asset_integration.rs  collection_of_struct_integration.rs  companion_integration.rs  container_integration.rs  container_proptest.rs  extended_types_integration.rs  external_usmap_integration.rs  fixture_anchor.rs  footer_proptest.proptest-regressions  footer_proptest.rs  index_proptest.rs  oom_pak.rs  pak_integration.rs  parser_robustness_proptest.rs  property_integration.rs  property_proptest.rs  repak_cross_validation.rs  unversioned_integration.rs
crates/paksmith-doc-lint/: Cargo.toml
crates/paksmith-doc-lint/src/: inventory_files.rs  lib.rs  main.rs  required_headings.rs  status_enum.rs
crates/paksmith-doc-lint/tests/: cli.rs  inventory_files.rs  required_headings.rs  status_enum.rs
crates/paksmith-doc-lint/tests/fixtures/: well-formed-doc.md
crates/paksmith-fixture-gen/: Cargo.toml
crates/paksmith-fixture-gen/src/: encryption.rs  external_usmap.rs  lib.rs  main.rs  uasset.rs
crates/paksmith-fixture-gen/tests/: cross_validation.rs  differential_proptest.rs
crates/paksmith-gui/: CHANGELOG.md  Cargo.toml
crates/paksmith-gui/src/: app.rs  audio_output.rs  main.rs  menu.rs
crates/paksmith-gui/src/panels/: console.rs  content.rs  detail.rs  key_prompt.rs  mod.rs  sidebar.rs  status_bar.rs  toolbar.rs
crates/paksmith-gui/src/state/: archive.rs  audio_view.rs  console.rs  export.rs  hex_view.rs  keyflow.rs  log_buffer.rs  mod.rs  profiles.rs  property_view.rs  tabs.rs  texture_view.rs  toast.rs  tree.rs
crates/paksmith-gui/src/task/: asset.rs  audio.rs  export.rs  mod.rs  open.rs  texture.rs
crates/paksmith-gui/src/theme/: accent.rs  mod.rs  tokens.rs
crates/paksmith-gui/src/widgets/: audio_player.rs  context_menu.rs  export_picker.rs  file_tree.rs  hex_view.rs  inline_band.rs  mod.rs  property_tree.rs  tab_bar.rs  texture_viewer.rs  toast.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_asset_parse.rs  fuzz_audio_decode.rs  fuzz_bulk_decompress.rs  fuzz_export_pipeline.rs  fuzz_locres_parse.rs  fuzz_lz4_decompress.rs  fuzz_pak_open.rs  fuzz_texture_decode.rs  fuzz_usmap_parse.rs
(+246 files in other folders)
