[workspace]
resolver = "2"
members = ["crates/*"]
# `paksmith-fixture-gen` is intentionally excluded from default-members so
# routine `cargo build` / `cargo test` from the repo root never has to
# resolve its `repak` git dependency. CI uses `--workspace` to include it;
# fixture regeneration is `cargo run -p paksmith-fixture-gen`. See
# crates/paksmith-fixture-gen/Cargo.toml for full rationale (closes #20).
default-members = ["crates/paksmith-core", "crates/paksmith-cli", "crates/paksmith-gui"]

[workspace.package]
# `version` is intentionally NOT declared here. release-please tracks
# each crate's version individually (`release-please-config.json` +
# `.release-please-manifest.json`) and updates the per-crate Cargo.toml
# `version` field on each release. Using `version.workspace = true`
# from a crate's Cargo.toml would hide the value behind workspace
# inheritance where release-please can't find it. New crates added to
# this workspace must declare their own `version = "x.y.z"`.
edition = "2024"
license = "MIT"
rust-version = "1.88"

[workspace.dependencies]
thiserror = "2.0.12"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.97"
byteorder = "1.5"
tracing = "0.1.40"
flate2 = "1.1"
sha1 = "0.11"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unused_results = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
used_underscore_binding = "allow"
