[workspace]
resolver = "2"
members = ["crates/*"]
# Four crates are intentionally excluded from default-members:
#   - `paksmith-fixture-gen` — so routine `cargo build` from the repo
#     root doesn't have to resolve its `repak` git dependency. Run via
#     `cargo run -p paksmith-fixture-gen` when regenerating fixtures.
#     See its Cargo.toml for full rationale (closes #20).
#   - `paksmith-core-tests` — so `cargo build` doesn't compile the
#     heavyweight ~4100-line integration suite (the test files moved
#     here from paksmith-core/tests/ when the dev-dep self-import was
#     restructured to fix a release-please cycle). Run via
#     `cargo test --workspace --all-features` to include them
#     (CLAUDE.md's documented test command).
#   - `paksmith-bench` — so routine `cargo build` doesn't compile
#     criterion + the bench binaries (issue #245). Run via
#     `cargo bench -p paksmith-bench` manually; CI does NOT run the
#     bench suite per-PR (a `workflow_dispatch`-only workflow at
#     .github/workflows/bench.yml allows on-demand runs).
#   - `paksmith-doc-lint` — internal CI lint tool for the
#     `docs/formats/` per-format documentation framework. Routine
#     `cargo build` skips it; CI uses `--workspace` and the linter
#     binaries are invoked manually as `cargo run -p paksmith-doc-lint
#     -- <subcommand> <path>`.
# CI uses `--workspace` in all four cases.
default-members = ["crates/paksmith-core", "crates/paksmith-cli", "crates/paksmith-gui"]

[workspace.package]
# `version` is intentionally NOT declared here. release-please tracks
# each crate's version individually (`release-please-config.json` +
# `.release-please-manifest.json`) and updates the per-crate Cargo.toml
# `version` field on each release. Using `version.workspace = true`
# from a crate's Cargo.toml would hide the value behind workspace
# inheritance where release-please can't find it. New crates added to
# this workspace must declare their own `version = "x.y.z"`.
edition = "2024"
license = "MIT"
rust-version = "1.88"

[workspace.dependencies]
thiserror = "2.0.12"
# `rc` enables Serialize/Deserialize for `Arc<T>`. Required by
# `PropertyValue`'s `Arc<str>` fields (#365 — propagate FName's Arc
# backing through the property tree). Note: serde-rc Deserialize
# freshly allocates each Arc — sharing isn't reconstructed across
# the wire. paksmith parses `.uasset` from binary, not JSON, so the
# non-sharing on deserialize is non-functional for the hot path.
serde = { version = "1.0.220", features = ["derive", "rc"] }
serde_json = "1.0.150"
byteorder = "1.5"
tracing = "0.1.40"
flate2 = "1.1"
sha1 = "0.11"
tempfile = "3"
proptest = "1"
zstd = "0.13"
brotli = "8"
# Phase 3d Task 4: DataTable CSV export (RFC 4180 writer). MIT/Unlicense.
csv = "1.3"
# Phase 3e-5: BC1-BC7 block decoders for texture export. Pure-Rust, MIT
# port of bcdec.h — the BC-family decode path (the mobile ETC2/ASTC path
# uses texture2ddecoder, added at 3e-6).
bcdec_rs = "0.2.0"
# Phase 3e-6: ASTC (4x4..12x12) + ETC1/ETC2 mobile block decoders. Pure-Rust
# no_std, MIT-OR-Apache-2.0. Whole-mip decode functions returning BGRA u32.
texture2ddecoder = "0.1.2"
# Phase 3e-8: PNG encoding for Texture2D export (PngHandler). Pure-Rust,
# MIT-OR-Apache-2.0 — the `png` crate directly, NOT the heavier `image` crate.
png = "0.18.1"
# Phase 3f: Vorbis decode for OggHandler (USoundWave "OGG" → 16-bit PCM WAV).
# Pure-Rust, actively maintained, MPL-2.0 (scoped license exceptions in deny.toml).
# Feature-gated to only the Ogg container reader + Vorbis codec — no other
# formats/codecs are compiled in.
symphonia = { version = "0.6", default-features = false, features = ["ogg", "vorbis"] }
# Phase 3g: IEEE 754 half-precision (f16) decode for FStaticMeshVertexBuffer's
# FMeshUVHalf texture coordinates. Widely used, actively maintained, MIT/Apache.
half = "2.7.1"
# Phase 3g2: glTF 2.0 (.glb) static-mesh export. `default-features = false`
# drops the importer/extras/utils machinery we don't use — paksmith only
# WRITES glTF (build a `json::Root`, wrap in `binary::Glb`, `to_vec`). The
# `names` feature keeps `name` fields on the JSON node/mesh structs so exported
# meshes carry readable identifiers. MIT-OR-Apache-2.0.
gltf = { version = "1.4.1", default-features = false, features = ["names"] }
# `glam` supplies f64 DMat4/DQuat/DVec3 for the skeletal exporter's bind-matrix
# compose + invert (basis conjugation B·L·B⁻¹ / IBM = B·G⁻¹·B⁻¹). Used only in
# `export/skeletal_mesh.rs`. MIT-OR-Apache-2.0, crates.io. `std` + `f64` on (the
# f64 types live behind glam's `f64` feature); no other extras.
glam = { version = "0.33", default-features = false, features = ["std", "f64"] }
# Phase 5a: AES-256-ECB decryption of encrypted UE paks (same RustCrypto crate
# repak uses). ECB is done by manual 16-byte block iteration — no ecb/cbc dep.
# MIT/Apache-2.0.
aes = { version = "0.8.4", features = ["zeroize"] }
# Phase 5a: zero AES key material on drop (crypto-material hygiene). MIT/Apache-2.0.
# Floor 1.7: `ZeroizeOnDrop` derive (needs the `zeroize_derive` feature) and a
# minimal-versions floor at or above any transitive requirement.
zeroize = { version = "1.7", features = ["zeroize_derive"] }
# Phase 5b: game-profile TOML store (ProfileStore round-trip via toml::to_string_pretty /
# toml::from_str). MIT/Apache-2.0. Key material flows through the keys_serde adapter,
# never through toml's own ser/de of AesKey.
toml = "0.8"
# Phase 5b: resolve the platform config directory for the profile store
# (`ProfileStore::config_path`). Pure-Rust, MIT/Apache-2.0.
dirs = "5"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unused_results = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Cast lints are workspace-wide `deny`. Every cast site requires
# either a per-site `#[allow(clippy::<lint>)]` with an inline
# justification (preferred), or — in `testing/*`, `paksmith-fixture-
# gen/*`, and integration-test files only — a module-level
# `#![allow(...)]` with a paragraph rationale covering the file's
# bounded-input contract. Production parser code (`asset/*`,
# `container/pak/*`) MUST use per-site allows so a future cast in
# those files surfaces in review rather than slipping past a broad
# scope.
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
doc_markdown = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
used_underscore_binding = "allow"
