# cargo-fuzz crate for paksmith. Empty `[workspace]` table marks this
# as its own workspace (cargo-fuzz convention), isolated from the root
# whose `members = ["crates/*"]` glob doesn't pick this up anyway.
# Requires nightly toolchain because libfuzzer-sys uses LLVM coverage-
# guided instrumentation only available on nightly rustc.
#
# Build/run: `cargo +nightly fuzz run fuzz_pak_open`.
[workspace]

[package]
name = "paksmith-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
# Internal crate, never published. License declared explicitly to
# satisfy cargo-deny's `unlicensed` check when run against this
# workspace (#fuzz-deny). Matches the root workspace's license.
license = "MIT"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
# Path-only `paksmith-core = { path = ... }` trips cargo-deny's
# `wildcards = "deny"` ban. Adding `version = "0.1"` (matching the
# workspace version of paksmith-core) gives the dep a non-wildcard
# version requirement without changing resolution behavior — the
# `path` field still takes precedence locally.
paksmith-core = { path = "../crates/paksmith-core", version = "0.1" }

# Required for cargo-fuzz to discover the harness binaries.
[[bin]]
name = "fuzz_pak_open"
path = "fuzz_targets/fuzz_pak_open.rs"
test = false
doc = false
bench = false
