# cargo-fuzz crate for paksmith. Empty `[workspace]` table marks this
# as its own workspace (cargo-fuzz convention), isolated from the root
# whose `members = ["crates/*"]` glob doesn't pick this up anyway.
# Requires nightly toolchain because libfuzzer-sys uses LLVM coverage-
# guided instrumentation only available on nightly rustc.
#
# Build/run: `cargo +nightly fuzz run fuzz_pak_open`.
[workspace]

[package]
name = "paksmith-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
# Internal crate, never published. License declared explicitly to
# satisfy cargo-deny's `unlicensed` check when run against this
# workspace (#fuzz-deny). Matches the root workspace's license.
license = "MIT"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
# Path-only `paksmith-core = { path = ... }` trips cargo-deny's
# `wildcards = "deny"` ban. Adding a non-wildcard version constraint
# gives the dep a real requirement without changing resolution
# behavior (the `path` field still takes precedence locally).
#
# **Pre-1.0 range** (`>= 0.1, < 1`) rather than a strict minor pin
# (`"0.1"`, which means `^0.1` = `>= 0.1.0, < 0.2.0`): the fuzz
# workspace lives outside release-please's tracked manifest, so
# release-please cannot update this pin when it bumps paksmith-core.
# A strict pre-1.0 pin would break the fuzz build on every minor
# release (`0.1.x → 0.2.x → ...`). The wider range survives all
# pre-1.0 bumps; we'll revisit at 1.0. See PR #475 for the recurring
# failure this fixes.
#
# `__test_utils` exposes the `testing::bench` decode seams (`zlib_decompress`,
# `decode_texture_mip` + `texture_encoded_len`, `transcode_audio`) that
# fuzz_bulk_decompress / fuzz_texture_decode / fuzz_audio_decode reach the
# Phase 3 decode hot paths through. The feature is behavior-neutral (no extra
# deps; the OOM injection seams it gates stay disarmed unless explicitly armed),
# the same way the `paksmith-bench` crate enables it.
paksmith-core = { path = "../crates/paksmith-core", version = ">= 0.1, < 1", features = [
    "__test_utils",
] }

# Required for cargo-fuzz to discover the harness binaries.
[[bin]]
name = "fuzz_pak_open"
path = "fuzz_targets/fuzz_pak_open.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_usmap_parse"
path = "fuzz_targets/fuzz_usmap_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_locres_parse"
path = "fuzz_targets/fuzz_locres_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_asset_parse"
path = "fuzz_targets/fuzz_asset_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_bulk_decompress"
path = "fuzz_targets/fuzz_bulk_decompress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_texture_decode"
path = "fuzz_targets/fuzz_texture_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_audio_decode"
path = "fuzz_targets/fuzz_audio_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_export_pipeline"
path = "fuzz_targets/fuzz_export_pipeline.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lz4_decompress"
path = "fuzz_targets/fuzz_lz4_decompress.rs"
test = false
doc = false
bench = false
