# Performance benchmark harness for paksmith. Establishes a baseline
# BEFORE Phase 2b changes the asset parser hot path (typed-property
# iteration will add per-property allocations + FName resolutions).
# Without these benches captured up front, "Phase 2b made parsing N×
# slower" is invisible. See issue #245 for the full rationale.
#
# This crate is intentionally NOT in the workspace's `default-members`
# (see the workspace `Cargo.toml`). Routine `cargo build` / `cargo test`
# never compiles criterion or the bench binaries. CI is gated on
# `--workspace` for clippy/doc/test surfaces but does NOT run
# `cargo bench` per-PR — criterion needs quiet boxes and GHA shared
# runners have ±15-30% variance. A `workflow_dispatch`-only workflow
# (`.github/workflows/bench.yml`) lets maintainers run them manually.

[package]
name = "paksmith-bench"
# Not released — internal benchmark tool, not part of release-please's
# tracked packages. Pinned to 0.0.0 to make this obvious; the root
# `workspace.package.version` would have it inheriting the user-facing
# version, which is misleading for a non-user-facing crate.
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Internal benchmark harness for paksmith-core (criterion-based)"
publish = false

[lib]
# Shared bench-helper surface (lazy fixture caching, etc). Currently
# empty; benches that need to share setup code (e.g., the 1GB pak
# generator) reach into it.
path = "src/lib.rs"
# `bench = false` is critical: without it, `cargo bench -p paksmith-
# bench` tries to invoke the lib's auto-generated bench-test harness
# (cargo's default libtest), which doesn't accept criterion's runtime
# flags like `--quick` / `--save-baseline`. Disabling here means
# `cargo bench` only runs the explicit `[[bench]]` entries below.
bench = false

[dependencies]
# No runtime dependencies. The lib crate is a thin helper surface for
# the benches; criterion + the core/fixture-gen deps live in
# [dev-dependencies] because criterion benches build as a dev target.

[dev-dependencies]
# criterion is the de-facto Rust micro-benchmark harness. `html_reports`
# emits per-bench HTML graphs under target/criterion/; baselines are
# captured via `--save-baseline <name>` and persisted under
# `target/criterion/<bench>/<baseline>/`. We commit a redacted copy of
# the relevant `estimates.json` under `baselines/` for the
# phase-2a-done snapshot so the numbers are reproducible across
# checkouts without re-running the suite.
criterion = { version = "0.8", features = ["html_reports"] }

# `__test_utils` feature is REQUIRED — bench fixture generation reuses
# `MinimalPackageSpec`/`build_minimal` from paksmith-core's testing
# module. Mirrors paksmith-fixture-gen / paksmith-core-tests; kept in
# [dev-dependencies] (not [dependencies]) so `cargo build --release`
# of any consumer that pulls in paksmith-bench never activates
# `__test_utils` via feature unification.
paksmith-core = { path = "../paksmith-core", version = "0.2.0", features = ["__test_utils"] }

# Bench fixture synthesis for parameterized .uasset bytes lives in
# paksmith-fixture-gen's library surface (`uasset::synthesize_*`,
# added by Commit B). Same dev-dep rationale as paksmith-core above —
# fixture-gen's git-dep transitives (repak, unreal_asset) only need
# to resolve when the bench crate's bench target is being built, not
# during a release build of a paksmith consumer.
#
# `version = "0.0.0"` matches paksmith-fixture-gen's declared version
# and satisfies cargo-deny's `wildcards = "deny"` rule — bare path
# dependencies (no version constraint) trip the wildcard check.
paksmith-fixture-gen = { path = "../paksmith-fixture-gen", version = "0.0.1" }

# Direct repak access for pak-fixture writers (multi-entry / large
# paks generated on demand under `target/bench-fixtures/`). Pinned
# to the same SHA as paksmith-fixture-gen — the workspace dep graph
# already resolves through this version, so adding it here doesn't
# pull in a second copy. cargo-deny is satisfied by the
# `version = "0.2"` constraint matching the git-checkout's actual
# crate version + the existing `allow-git` entry in deny.toml.
repak = { version = "0.2", git = "https://github.com/trumank/repak", rev = "e215472c51db69328b1ce77be2db24d24c1d646b", default-features = false, features = ["compression"] }

# JSON emission benches measure `serde_json::to_writer{,_pretty}` on
# a parsed `Package`. Inherited from the workspace because the
# version pin is already maintained centrally there.
serde_json.workspace = true

# The Phase 3 `bulk` bench synthesizes a zlib-compressed payload (via
# `ZlibEncoder`) to feed the decompression accessor. Already a paksmith-core
# dependency; the workspace pin keeps the version consistent.
flate2.workspace = true

# Bench targets. `harness = false` on each: criterion owns the
# binary's `main()`. Without it, cargo's default libtest harness
# runs alongside criterion and the bench's main never gets control,
# which surfaces as `error: Unrecognized option: 'quick'` on
# criterion's runtime flags.

[[bench]]
name = "pak"
harness = false

[[bench]]
name = "asset"
harness = false

[[bench]]
name = "name_table"
harness = false

[[bench]]
name = "inspect"
harness = false

[[bench]]
name = "try_reserve_exact_cost"
harness = false

# Phase 3 export-pipeline benches (issue: Phase 3 perf audit). Cover the
# heaviest compute: texture block-decode, bulk zlib decompress, mesh→glTF
# lowering, and DataTable CSV/JSON export.
[[bench]]
name = "texture"
harness = false

[[bench]]
name = "bulk"
harness = false

[[bench]]
name = "mesh"
harness = false

[[bench]]
name = "skeletal"
harness = false

[[bench]]
name = "datatable"
harness = false

[lints]
workspace = true
