[package]
name = "paksmith-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI for exploring and extracting Unreal Engine game assets"

[[bin]]
name = "paksmith"
path = "src/main.rs"

[dependencies]
paksmith-core = { path = "../paksmith-core" }
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
comfy-table = "7"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio.workspace = true
indicatif = "0.18"
glob = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json"] }

[lints]
workspace = true
