[package]
name = "paksmith-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI for exploring and extracting Unreal Engine game assets"

[[bin]]
name = "paksmith"
path = "src/main.rs"

[dependencies]
paksmith-core = { path = "../paksmith-core", version = "0.1" }
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
comfy-table = "7"
tracing.workspace = true
tracing-subscriber.workspace = true
glob = "0.3"
rayon = "1"
indicatif = "0.18"
regex = "1.11"
# Production only needs a current-thread runtime + block_on (see `block_on` in
# main.rs); the full rt/macros stack is pulled in for tests via dev-dependencies.
# Floor 1.45 matches the workspace tokio floor (reqwest's hyper-util needs
# tokio 1.45 APIs; see the workspace Cargo.toml note) so `Minimal versions`
# resolves a tokio that compiles.
tokio = { version = "1.45", default-features = false, features = ["rt"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json"] }
tempfile.workspace = true
wiremock.workspace = true
ed25519-dalek.workspace = true
tokio.workspace = true

[lints]
workspace = true
