[package]
name = "paksmith-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core library for parsing and extracting Unreal Engine game assets"

[dependencies]
thiserror.workspace = true
serde.workspace = true
byteorder.workspace = true
tracing.workspace = true
flate2.workspace = true
sha1.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
# Aliased self-dep enables `__test_utils` for in-source `#[cfg(test)]`
# tests in `src/`. Without this, `cargo test -p paksmith-core` fails
# to compile the ~86 tests in `index/mod.rs::tests` that import
# `crate::testing::v10::*` (those symbols are gated by `__test_utils`).
#
# The aliased KEY (`paksmith-core-self`) escapes release-please's
# cargo-workspace plugin filter — that plugin filters edges by dep
# key against workspace crate names, and `paksmith-core-self` isn't a
# workspace crate name. No self-edge, no cycle. Integration tests
# that need `__test_utils` live in the sibling `paksmith-core-tests`
# crate, which activates the feature via a regular path-dep with
# `features = ["__test_utils"]`.
paksmith-core-self = { package = "paksmith-core", path = ".", features = ["__test_utils"] }
# Issue #111: capture-and-assert `tracing::warn!`/`error!` events for
# operator-facing telemetry that monitoring tools grep for. The
# `#[traced_test]` macro installs a per-test capture subscriber so
# `logs_contain("token")` works without exposing a `cfg(test)`
# accessor on production types (which would be API-leakage) and
# without hand-rolling a `Subscriber` impl (which is non-trivial
# due to the trait's many methods).
tracing-test = "0.2"

[features]
# Test-only accessors gated behind this feature so they're not part
# of the stable public API. Activated by the sibling
# `paksmith-core-tests` crate (which owns the integration tests that
# need these accessors) and by `paksmith-fixture-gen`. Downstream
# consumers should NOT enable it.
#
# Previously activated via a dev-dep self-import in this Cargo.toml;
# that created a `paksmith-core -> paksmith-core` edge in the
# release-please cargo-workspace plugin's dep graph, breaking the
# release workflow. The dedicated test crate avoids the self-edge.
#
# **Feature-unification caveat:** Cargo features are resolved
# globally per package across the workspace dep graph. If a future
# workspace member adds `paksmith-core` as a NON-DEV dep AND
# something else activates `__test_utils` transitively, the gated
# symbols would land in the non-test build. The leading `__` is
# convention only; cargo doesn't enforce it. Reviewers adding new
# paksmith-core consumers should verify they don't accidentally
# unify this feature open.
__test_utils = []

# Cross-parser fixture generation (uses the trumank/repak git dep) and
# the Layer 1+2 cross-validation tests live in the sibling
# `paksmith-fixture-gen` crate, which is excluded from workspace
# default-members. This keeps the main library build free of any git-
# sourced dependency. See workspace Cargo.toml + #20 for rationale.

[[example]]
name = "generate_fixtures"
path = "../../tests/fixtures/generate.rs"

[lints]
workspace = true
